# book-recognition-with-surf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  book-recognition-with-surf.kdev4  book-recognition-with-surf.sln  book-recognition-with-surf.vcxproj  book-recognition-with-surf.vcxproj.filters  db.xml
.cmake/: FindTinyXML.cmake
book-recognition-lib/: Book.cpp  Book.h  CMakeLists.txt  Database.cpp  Database.h  Exceptions.cpp  Exceptions.h  Recognizer.cpp  Recognizer.h  book-recognition-lib.vcxproj  book-recognition-lib.vcxproj.filters
doc/: PRVR125_MOBAR.doc  PRVR125_MOBAR.docx  PRVR125_MOBAR.odt  search-comparision-algorithm.eps
include/: BookDataDialog.h  MainWindow.h
src/: BookDataDialog.cpp  MainWindow.cpp  main.cpp
